Saving visual fixes before working on mobile menu

--- a/app.css
+++ b/app.css
@@ -91,7 +91,7 @@
   }
 
   .badge-text {
-    @apply text-brand-primary-700 uppercase text-[12px] font-bold tracking-widest;
+    @apply text-brand-primary-700 uppercase md:text-[12px] text-[10px] font-bold tracking-widest;
   }
   .badge-text-sm {
     @apply text-brand-primary-700 uppercase text-[10px] font-bold tracking-widest;
@@ -116,7 +116,7 @@
 
   /* Button: primary (green) */
   .button-primary {
-    @apply min-h-10 px-6 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors;
+    @apply min-h-10 md:px-6 px-4 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors;
   }
   .button-primary-icon {
     @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 md:text-xs text-xxs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors;
@@ -131,7 +131,7 @@
   }
   /* Button: secondary (white) */
   .button-secondary {
-    @apply min-h-10 px-6 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+    @apply min-h-10 md:px-6 px-4 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
   }
   .button-secondary-icon {
     @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
@@ -146,7 +146,7 @@
   }
   /* Button: tertiary (white/green) */
   .button-tertiary {
-    @apply min-h-10 px-6 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+    @apply min-h-10 md:px-6 px-4 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
   }
   .button-tertiary-icon {
     @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
@@ -161,7 +161,7 @@
   }
   /* Button: transparent */
   .button-transparent {
-    @apply min-h-10 px-6 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
+    @apply min-h-10 md:px-6 px-4 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
   }
   .button-transparent-icon {
     @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 md:text-xs text-xxs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
